# dispatcharr-rs-port

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  PERF_NOTES.md  README.md  baseline_benchmark.md  build_error.txt  build_error_ascii.txt  build_error_v2.txt  cargo_err.txt  channels.json  db.sqlite3  docker_tail.txt  extracted_group.txt  extracted_stream.txt  fix_group_disable.py  fix_update_channel.py  insert_test_notification.py  patch_api.patch  patch_entities.py  patch_frontend_streams.py  patch_m3u_groups.py  patch_proxy.py  patch_proxy2.py  patch_xc_groups.py  plan.txt  pr_description.md  query_db.py  read_log.py  refactor_api_flatten.py  replace_group.txt  resolve_conflict.sh  resolver.py  resolver2.py  resolver3.py  resolver4.py  resolver_dedupe.py  (+8 more)
.github/workflows/: rust.yml
Antigravity/: check_db.py  check_db_table.py  check_endpoints.py  check_insert.py  check_schema.py  create_test_db.py  missing_endpoints_report.md  plan.txt  scratch_update_api.py
Dispatcharr-main/: pyproject.toml
Dispatcharr-main/apps/proxy/ts_proxy/: stream_manager.py
Dispatcharr-main/frontend/: package-lock.json  package.json
Dispatcharr-main/frontend/src/: App.jsx  api.js  constants.js
Dispatcharr-main/frontend/src/components/: ErrorBoundary.jsx  GuideRow.jsx  HourTimeline.jsx
Dispatcharr-main/frontend/src/components/forms/: M3U.jsx  (+2 more)
Dispatcharr-main/frontend/src/config/: navigation.js
Dispatcharr-main/frontend/src/pages/: Guide.jsx  Settings.jsx  Stats.jsx  StreamChecker.jsx
Dispatcharr-main/frontend/src/utils/: guideUtils.js
data/: offline.ts
scratch/: create_account_tables.py  generate_dummy_ts.py  init_user.json  inject_admin.py  inject_test_data.py  inspect_table.rs  list_all_tables.py  list_dispatcharr_tables.py  list_tables.py  mock_provider.py  promote_admin.py  test_admin_auth.py  test_epg_stale.py
src/: accounts.rs  api.rs  api_perf_test.rs  auth.rs  background.rs  channel_sync.rs  epg.rs  epg_api.rs  events.rs  m3u.rs  main.rs  middleware.rs  outputs.rs  proxy.rs  settings.rs  vod.rs  xtream_codes.rs
src/entities/: accounts_user_groups.rs  auth_group.rs  auth_group_permissions.rs  auth_permission.rs  channel.rs  channel_group.rs  channel_group_m3u_account.rs  channel_profile.rs  channel_stream.rs  core_notificationdismissal.rs  core_settings.rs  core_streamprofile.rs  core_systemevent.rs  core_systemnotification.rs  core_useragent.rs  epg_data.rs  epg_program.rs  epg_source.rs  logo.rs  m3u_account.rs  m3u_account_profile.rs  m3u_filter.rs  mod.rs  server_group.rs  stream.rs  stream_sorting_rule.rs  user.rs  vod_category.rs  vod_episode.rs  vod_m3uepisoderelation.rs  vod_m3umovierelation.rs  vod_m3useriesrelation.rs  vod_m3uvodcategoryrelation.rs  vod_movie.rs  vod_series.rs
src/stream_checker/: checker.rs
(+18 files in other folders)
